# franka_emika_panda_robot_grasping_tool

./: README.md
my_cobot/: CMakeLists.txt  package.xml  passwd
my_cobot/launch/: cobot_node.launch  gripper_node.launch
my_cobot/src/: cobot_gripper.cpp  cobot_main.cpp
my_cobot/srv/: goal_joint.srv  grasp.srv
panda_planing/: CMakeLists.txt  package.xml
panda_planing/src/: panda_planing_service.cpp
panda_planing/srv/: goal_pose.srv
panda_to_yolo/: CMakeLists.txt  package.xml
panda_to_yolo/scripts/: detect.py  panda_test.py  service_client.py  service_server.py  yolo_ros.py
panda_to_yolo/srv/: pandaToYolo.srv
